# MopMan_Packetmaker

./: .gitignore  Dockerfile  README.md  config.json  config.py  gui.py  main.py  make_packets.py  pyproject.toml  requirements.txt  requirements_conda.txt  setup.py
progress_bar/: precontext.json  progress_bar.py  progress_bar2.py
scripts/: DocumentGenerator.py  DocumentGeneratorLaTeX.py  add_footer2pdf.py  airtable_api.py  docxtopdf.py  favicon_downloader.py  rich_text.py  template_factory.py  website2pdf.py
scripts/library_demos/: demo.docx  gov4_precontext example.json  gov4_precontext.py  qr_code demo.py  qr_code.py
secrets/: .gitignore  template.env
src/: DocumentGenerator.py  DocumentGeneratorLaTeX.py  __init__.py  add_footer2pdf.py  add_footer_to_pdf.py  airtable_api.py  cli.py  docxtopdf.py  favicon_downloader.py  gui.py  main.py  pdf_helpers.py  rich_text.py  ta_guide.py  template_factory.py  utils.py
src/airtable/: airtable_api.py
src/archive/: website2pdf_wip.py
src/packet/: cover.py  device_readings.py  further_readings.py  packet.py
src/progress_bar/: progress_bar.py  progress_bar2.py
src/utils/: adjust_logo.py  favicon_downloader.py  make_id_from_title.py  make_qrcode.py
templates/: Cover Page Template.docx  Device Reading.docx  ERROR.docx  Further Reading.docx  TAs Guide.docx  cover_template.tex
templates/backups/: MAIA Cover Page Rendered.docx  MAIA Cover Page copy.docx  MAIA Further Reading Rendered.docx  MAIA Further Reading copy.docx
tests/: test_favicon_downloader.py
