[tool.poetry]
name = "mopman-packetmaker"
version = "0.1.0"
description = "CLI tool for generating curriculum packets and TA guides"
authors = ["Gatlen Culp <GatlenCulp@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
packetmaker = "src.cli:cli"

[tool.poetry.dependencies]
python = ">=3.11,<4"
click = "^8.1.7"
pydantic = ">=1.10.8"
rich = "^13.7.0"
airtable = "^0.4.8"
docx2pdf = "^0.1.8"
docxtpl = "^0.16.8"
pypdf = "^4.1.0"
python-docx = "^1.1.0"
qrcode = "^7.4.2"
reportlab = "^4.1.0"
requests = "^2.31.0"
tqdm = "^4.66.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.0"
pytest = "^8.0.0"
pyright = "^1.1.350"
pydoclint = "^0.3.8"
poethepoet = "^0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Copying ruff configuration from your example
[tool.ruff]
cache-dir = ".cache/ruff"
extend-include = ["*.ipynb"]
line-length = 100

[tool.ruff.lint]
ignore = [
    "ANN101",  # self type annotation (it's inferred)
    "COM812",  # Rule that conflicts with ruff format
    "F722",    # Forward annotations check
    "FA102",   # Annotations support (Python >= 3.9 is fine)
    "FBT001",  # Bool non-positional arguments needed for CLI
    "FBT002",  # Bool non-positional arguments needed for CLI
    "FIX002",  # Allow TODO
    "INP001",  # __init__.py for all packages
    "ISC001",  # Rule that conflicts with ruff format
    "PGH003",  # No general type: ignore
    "T201",    # Allow printing for CLI
    "TCH002",  # Type checking imports
    "TD002",   # Allow TODO
    "TD003"    # Allow TODO
]
select = ["ALL"]

[tool.pytest.ini_options]
addopts = "-rA -x --doctest-modules --color=yes"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20"
]